feat: install dddjango

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
-  cli-db:
+  jango-db:
     image: postgres:15
-    container_name: cli-db
+    container_name: jango-db
     restart: always
     environment:
       POSTGRES_DB: cli
@@ -11,23 +11,24 @@ services:
       - postgres_data:/var/lib/postgresql/data
     ports:
       - "5434:5432"
-  django-scaper:
+  django:
     build: .
-    container_name: django-scaper
+    container_name: django
     volumes:
       - ./src:/app
+      - /app/.venv
     ports:
       - "8100:8000"
     working_dir: /app
     depends_on:
-      - cli-db
+      - jango-db
     environment:
-      DB_HOST: cli-db
+      DB_HOST: jango-db
       DB_PORT: 5432
       DB_NAME: cli
       DB_USER: scraper
       DB_PASSWORD: fhs8i.xbfroq.sgdfu
-      DATABASE_URL: postgres://scraper:fhs8i.xbfroq.sgdfu@cli-db:5432/cli
+      DATABASE_URL: postgres://scraper:fhs8i.xbfroq.sgdfu@jango-db:5432/cli
 
 volumes:
   postgres_data:
